--- a/src/blocks/tab-trigger/style.scss
+++ b/src/blocks/tab-trigger/style.scss
@@ -1,4 +1,6 @@
 .decoupled-tabs-trigger {
+    width: 100%;
+    height: 100%;
     cursor: pointer;
     transition: all 0.2s ease;
 }
